# oplm

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  python-publish.yaml
configs/: README.md
docs/: ARCHITECTURE.md  EVAL_WORKPLAN.md  TECHNICAL_ANALYSIS.md
src/oplm/: __init__.py  __main__.py  cli.py  config.py  inference.py  train.py
src/oplm/configs/: __init__.py
src/oplm/configs/data/: base.yaml
src/oplm/configs/model/: base.yaml
src/oplm/configs/model/presets/: base.yaml  large.yaml  medium.yaml  small.yaml  xlarge.yaml
src/oplm/data/: __init__.py  collate.py  dataset.py  loader.py  tokenizer.py
src/oplm/eval/: __init__.py  evaluator.py  registry.py
src/oplm/eval/data/: __init__.py  sequence_loader.py  structure_loader.py
src/oplm/eval/metrics/: __init__.py  categorical_jacobian.py  contact.py  mlm.py
src/oplm/eval/tasks/: __init__.py  base.py  everest.py  proteinglue.py  proteingym.py  sequence.py  structure.py  tape.py
src/oplm/model/: __init__.py  attention.py  conv.py  embedding.py  ffn.py  masking.py  norm.py  residual.py  rope.py  transformer.py
src/oplm/training/: __init__.py  callbacks.py  checkpoint.py  flops.py  optim.py  trainer.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_docs.py  test_distributed.py  test_e2e.py  test_inference.py  test_placeholder.py  test_training.py
tests/data/: test_collate.py  test_dataset.py  test_loader.py  test_tokenizer.py
tests/eval/: test_categorical_jacobian.py  test_contact.py  test_eval_config.py  test_evaluator.py  test_mlm_metrics.py  test_registry.py  test_sequence_loader.py  test_sequence_task.py  test_structure_loader.py  test_structure_task.py  test_stubs.py
tests/model/: test_attention.py  test_conv.py  test_embedding.py  test_ffn.py  test_norm.py  test_residual.py  test_rope.py  test_transformer.py
