[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oplm"
version = "0.0.1"
description = "open protein language model"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Bryan Briney", email = "briney@scripps.edu" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.4.0",
    "omegaconf>=2.3",
    "typer>=0.9",
    "rich>=13.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
train = [
    "accelerate>=0.30",
    "deepspeed>=0.14",
    "wandb>=0.16",
    "datasets>=2.18",
]
flash = [
    "flash-attn>=2.5",
]
eval = [
    "biopython>=1.83",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
oplm = "oplm.cli:app"

[project.urls]
Homepage = "https://github.com/briney/oplm"
Repository = "https://github.com/briney/oplm"
Issues = "https://github.com/briney/oplm/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["oplm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "pyarrow",
    "pyarrow.*",
    "flash_attn",
    "flash_attn.*",
    "accelerate",
    "accelerate.*",
    "deepspeed",
    "deepspeed.*",
    "wandb",
    "wandb.*",
    "Bio",
    "Bio.*",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true
